Add simple implementation

--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/xouabita/mongorito-tcomb/issues"
   },
-  "homepage": "https://github.com/xouabita/mongorito-tcomb#readme"
+  "homepage": "https://github.com/xouabita/mongorito-tcomb#readme",
+  "dependencies": {
+    "kerberos": "0.0.18",
+    "mongorito": "^1.4.6",
+    "tcomb-validation": "^2.3.0"
+  }
 }
