Add simple example

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "kerberos": "0.0.18",
     "mongorito": "^1.4.6",
     "tcomb-validation": "^2.3.0"
+  },
+  "devDependencies": {
+    "co": "^4.6.0"
   }
 }
