--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "mongorito-tcomb",
   "version": "1.0.0",
   "description": "Bring schema validation to Mongorito thanks to tcomb",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "ava --serial tests.js"
+    "build": "./node_modules/coffee-script/bin/coffee -o ./lib/index.js -c src/index.coffee",
+    "install": "npm run build",
+    "test": "nyc ava --serial tests.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,7 @@
   "devDependencies": {
     "ava": "^0.11.0",
     "co": "^4.6.0",
-    "coffee-script": "^1.10.0"
+    "coffee-script": "^1.10.0",
+    "coveralls": "^2.11.6"
   }
 }
