--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,20 @@ before_script:
   npm i -g nyc
   npm i -g coveralls
 sudo: false
+compiler: clang-3.6
+env:
+  - CXX=clang-3.6
 addons:
   apt:
     sources:
       - mongodb-upstart
       - mongodb-3.0-precise
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
     packages:
       - mongodb-org-server
       - mongodb-org-shell
+      - clang-3.6
+      - g++-4.8
 
 after_success: npm run coveralls
