--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mongorito-tcomb",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Bring schema validation to Mongorito thanks to tcomb",
   "main": "./lib/index.js",
   "scripts": {
     "build": "./node_modules/coffee-script/bin/coffee -o ./lib/index.js -c src/index.coffee",
-    "install": "npm run build",
     "test": "nyc ava --serial tests.js",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
