Now throw error when creating new Model with invalid Schema

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongorito-tcomb",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Bring schema validation to Mongorito thanks to tcomb",
   "main": "./lib/index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/xouabita/mongorito-tcomb#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "kerberos": "0.0.18",
     "mongorito": "^1.4.6",
     "tcomb-validation": "^2.3.0"
