--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
       }
     }
   },
+  "ava": {
+    "babel": "inherit"
+  },
   "dependencies": {
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-0": "^6.5.0",
