--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "ava": "^0.13.0",
     "babel-cli": "^6.6.5",
-    "coveralls": "^2.11.6"
+    "coveralls": "^2.11.6",
+    "nyc": "^6.1.1"
   }
 }
